--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -128,25 +128,32 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	\begin{itemize}[label = $\triangleright$]
 		\item Le programme devra permettra a un client de se connecter sur le client FTP.
 		\item Le nom d'utilisateur et le mot de passe seront définit par l'administrateur du serveur. \textcolor{blue}{cf Authentification côté serveur}
-		\item Le programme doit proposer un champ pseudo.
-		\item Le programme doit proposer un champ mot de passe.
-		\item Le programme doit permettre d'envoyer les données. \textcolor{blue}{cf Bouton envoyer}
+		\item Le programme doit proposer un champ de texte éditable pour entrer un pseudo.
+		\item Le programme doit proposer un champ de texte éditable pour entrer mot de passe.
+		\item Le programme doit permettre d'envoyer les données d'authentification via un protocole sécurisé. \textcolor{blue}{cf Bouton envoyer}
 		\item Le programme doit envoyé le mot de passe crypté au serveur. \textcolor{blue}{cf Protocoles}
-		\item Le programme doit indiqué le succès a l'aide la phrase "Bonjour [pseudo]".
-		\item Le programme doit indiqué si une erreur est survenu et le type d'erreur.
+		\item Le programme doit indiqué le succès a l'aide la phrase "Bonjour [pseudo]"\textcolor{green}{Où ?}.
+		\item Le programme doit indiqué si une erreur est survenu et le type d'erreur\textcolor{green}{Où l'utilisateur voit cette indication ?}.
 		\subitem Exemple avec la phrase suivante en cas de mauvais mot de passe "Erreur de mot de passe".
 		\subitem Exemple en cas de pseudo non reconnu "L'utilisateur entré est invalide".
-		\item Le programme doit permettre l'auto-connexion au démarrage du programme.
+		\item Le programme doit permettre l'auto-connexion au démarrage du programme\textcolor{green}{Où est-ce que l'utilisateur peut configurer l'auto-connexion?}.
 	\end{itemize}
+	
+	\item \textcolor{green}{que se passe t-il si l'anthentification échoue?}
+	
+	\item \textcolor{green}{ si le login est erroné?}
+	
+	\item \textcolor{green}{ si le mot de passe est erroné ?}
+	
 
 \paragraph{Gestionnaire de marque-pages}
 	\begin{itemize}[label = $\triangleright$]
 		\item Le programme devrait proposer un gestionnaire de marque-pages de serveur.
-		\item Le programme devrait afficher un bouton "Bookmarks"
-		\item Cliquer sur le bouton "Bookmarks" devrait afficher la liste des marques-pages de l'utilisateur.
-		\item Un marque-page doit se composer obligatoirement d'un nom, de l'adresse du serveur, de l'identifiant de l'utilisateur.
+		\item Le programme devrait afficher un bouton "Bookmarks".\textcolor{green}{Où est positionné le bouton?}
+		\item Cliquer sur le bouton "Bookmarks" devrait afficher la liste des marques-pages de l'utilisateur.\textcolor{green}{Où la liste des marques-pages est affiché dans quoi ?}
+		\item Un marque-page doit se composer obligatoirement d'un nom, de l'adresse du serveur, de l'identifiant de l'utilisateur.\textcolor{green}{exemple de syntaxe ?}
 		\item Un marque-page doit avoir la possibilité d'enregistrer aussi le mot de passe de l'utilisateur si ce dernier le veut.
-		\item Le programme devrait afficher un bouton "Mettre un marque-page".
+		\item Le programme devrait afficher un bouton "Mettre un marque-page".\textcolor{green}{Où est positionné ce bouton ?}
 		\item Cliquer sur le bouton "Mettre un marque-page" devrait afficher un champ de saisie et une case à cocher.
 		\item Le champ de saisie devrait permettre à l'utilisateur d'enter le nom du marque-page.
 		\item La case à cocher devrait permettre à l'utilisateur de choisir si il veut enregistre son mot de passe ou non.
@@ -155,7 +162,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 \paragraph{Limitations}
 	\begin{itemize}[label = $\triangleright$]
 		\item Le programme doit permettre à l'utilisateur de limiter la vitesse de téléchargement des fichiers.
-		\item Pour cela le menu déroulant "Configuration" doit proposer un bouton "Limiter vitesse de téléchargement".
+		\item Pour cela le menu déroulant "Configuration" doit proposer un bouton "Limiter vitesse de téléchargement".\textcolor{green}{Où est ce menu déroulant sur l'interface graphique?}
 		\item Le programme doit permettre à l'utilisateur de donner une valeur précise à la limite de téléchargement.
 		\item Cliquer sur le bouton "Limiter vitesse de téléchargement" doit faire apparaitre un curseur permettant de donner la valeur de la limite.
 		\item Le programme doit permettre à l'utilisateur de limiter la vitesse de téléversement des fichiers.
@@ -172,7 +179,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	
 \paragraph{Utilisation des dossiers}
 	\begin{itemize}[label = $\triangleright$]
-		\item Le programme doit afficher l'arborescence des dossiers auquel l'utilisateur a accès sur le serveur courant.
+		\item Le programme doit afficher l'arborescence des dossiers auquel l'utilisateur a accès sur le serveur courant.\textcolor{green}{Où est-ce qu'il affiche cette arborescence ? dans une fenêtre à part ? sur la même fenêtre dans une partie à gauche ? dans ton *** ?}
 		\item Le programme doit permettre à l'utilisateur de parcourir tous les sous-dossiers du répertoire qui lui a été fournit.
 		\item Cliquer sur un dossier de l'arborescence doit afficher les sous-dossiers et fichiers de ce dossier.
 		\item Le programme doit permettre à l'utilisateur de créer autant de sous-dossier qu'il veut dans le répertoire qui lui a été fourni.
@@ -182,8 +189,8 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Ce champ de saisie doit permettre à l'utilisateur d'entrer le nom du sous-dossier.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel sous-dossier du répertoire qui lui a été fourni.
 		\item Le menu de gestion de dossier doit proposer un bouton "Supprimer le dossier".
-		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.
-		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.
+		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.\textcolor{green}{description de la boite ? bouton oui/non ?}
+		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.\textcolor{green}{ si le répertoire fourni n'existe pas ?}
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'utilisateur a fait un clic droit.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel fichier dans les sous-dossiers du répertoire qui lui a été fourni.
@@ -716,7 +723,7 @@ Un fichier d'historique des événements, appelé aussi fichier "log", permettra
 	
 		\item Le logiciel ne doit pas échouer plus de 1 authentification sur 100 en condition normal.
 		
-		\item \textbf{Le logiciel ne doit jamais autorisé l'accès un client dont le pseudo et/ou mot de passe sont erroné.}
+		\item \textbf{Le logiciel ne doit jamais autorisé l'accès des services du serveur d'un client dont le pseudo et/ou mot de passe sont erroné.}
 		
 		\item Le logiciel ne doit jamais confondre les comptes utilisateurs lors d'une authentification.
 		
